--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@4tw/cypress-drag-drop",
-  "version": "2.2.3",
+  "name": "fork-4tw-cypress-drag-drop",
+  "version": "1.0.0",
   "description": "A cypress child command for drag'n'drop support.",
   "main": "index.js",
   "types": "index.d.ts",
@@ -49,5 +49,8 @@
   },
   "peerDependencies": {
     "cypress": "^2.1.0 || ^3.1.0 || ^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
